# vtk-knowledge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-artifact.yml  ci.yml
src/vtk_knowledge/: __init__.py
src/vtk_knowledge/artifact/: __init__.py  fetcher.py
src/vtk_knowledge/index/: __init__.py  api_index.py
src/vtk_knowledge/pipeline/: __init__.py  cli.py  enrich.py  extract.py
src/vtk_knowledge/schema/: __init__.py  records.py
tests/: test_artifact_fetcher.py  test_build_enrich.py  test_build_extract.py  test_fetcher_ghcr.py  test_index.py  test_schema.py
