[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vtk-knowledge"
version = "1.0.0"
description = "VTK knowledge artifact: schema, in-memory index, and build pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    { name = "Patrick O'Leary", email = "patrick.oleary@kitware.com" }
]
keywords = ["vtk", "knowledge", "documentation", "api", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/patrickoleary/vtk-knowledge"
Repository = "https://github.com/patrickoleary/vtk-knowledge"
Issues = "https://github.com/patrickoleary/vtk-knowledge/issues"

[project.optional-dependencies]
build = [
    "vtk>=9.0.0",
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
vtk-knowledge = "vtk_knowledge.build.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/vtk_knowledge"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:enable_cleanup_closed ignored:DeprecationWarning",
]
